# discord-bot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: logs.rs  main.rs
src/commands/: activity.rs  barber.rs  dataset.rs  easter.rs  hoo.rs  mod.rs
