[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
dotenv = "0.15.0"
futures = "0.3.30"
json = "0.12.4"
poise = "0.6.1"
reqwest = { version = "0.11.23", features = ["json"] }
thousands = "0.2.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter", "time"] }
